[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scBERT"
version = "1.0.0"
description = "Single-cell BERT for cell type annotation"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "torch>=1.8.1",
    "torchvision>=0.9.1",
    "transformers>=4.6.1",
    "scanpy>=1.7.2",
    "scikit-learn>=0.24.2",
    "scipy>=1.5.4",
    "numpy>=1.20",
    "pandas>=1.1.5",
    "einops>=0.6.0",
    "local-attention>=1.11.2", # Added dependency
    "matplotlib >= 3.7",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "pytest",
    "pre-commit",
]

[tool.setuptools]
packages = {find = {}}

[tool.ruff]
target-version = "py38"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I"]
fixable = ["ALL"]

[tool.ruff.format]
quote-style = "double"